name:                lognum
version:             0.1.0.0
synopsis:            Numbers in logarithmic base
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.LogBase
  build-depends:       base
                      ,binary
                      ,hashable
                      ,primitive
                      ,vector
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  default-language:    Haskell2010

benchmark loggy
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      benchmark
  build-depends:       base, lognum, criterion, vector
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  default-language:    Haskell2010

